Fix text align bug

--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid red;
-}
+} */
 
 .rest__header {
     display: flex;
@@ -30,8 +30,6 @@
     font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.04em;
-    text-align: left;
-
 }
 
 .rest__header-content_headline {
@@ -55,8 +53,6 @@
     line-height: 28px;
     letter-spacing: 0.04em;
     text-align: left;
-
-    margin-bottom: 2rem;
 }
 
 .rest__header-image {
